ziz-drop/grammar/test/corpus/basics.txt
================================================================================
sexp list
================================================================================
(define (fact n) (if (= n 0) 1 (* n (fact (- n 1)))))
--------------------------------------------------------------------------------
(source_file
  (list (symbol) (list (symbol) (symbol))
    (list (symbol) (list (symbol) (symbol) (integer)) (integer)
      (list (symbol) (symbol) (list (symbol) (list (symbol) (symbol) (integer)))))))

================================================================================
layout list
================================================================================
define (fact n)
  if (= n 0)
    1
    * n (fact (- n 1))
--------------------------------------------------------------------------------
(source_file
  (layout_list (symbol) (list (symbol) (symbol))
    (layout_block
      (layout_list (symbol) (list (symbol) (symbol) (integer))
        (layout_block
          (integer)
          (layout_list (symbol) (symbol) (list (symbol) (list (symbol) (symbol) (integer)))))))))

================================================================================
atoms
================================================================================
nil true 42 -7 3.14 "s\"t" :kw sym-bol? [1 2] {:a 1}
--------------------------------------------------------------------------------
(source_file
  (layout_list (nil) (boolean) (integer) (integer) (real) (string (escape_sequence)) (keyword) (symbol)
    (vector (integer) (integer)) (map (keyword) (integer))))
